force-app/main/default/objects/dsfs__DocuSign_Status__c/fields/Bill_To_Contact_Email__c.field-meta.xml
<CustomField>
    <fullName>Bill_To_Contact_Email__c</fullName>
    <description>GTMS-16637: Created as part of DCA Phase 2 project on 1/18/24</description>
    <label>Bill To Contact Email</label>
    <type>Email</type>
</CustomField>