force-app/main/default/objects/dsfs__DocuSign_Status__c/fields/Bill_To_Contact_Name__c.field-meta.xml
<CustomField>
    <fullName>Bill_To_Contact_Name__c</fullName>
    <description>To Store the Contact name value form Billing To Contact field on quote : GTMS-16637</description>
    <label>Bill To Contact Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>