force-app/main/default/objects/dsfs__DocuSign_Status__c/fields/Bill_To_Contact_Phone__c.field-meta.xml
<CustomField>
    <fullName>Bill_To_Contact_Phone__c</fullName>
    <description>To Store the Bill To Contact Phone value form Billing To Contact field on quote : GTMS-16637</description>
    <label>Bill To Contact Phone</label>
    <type>Phone</type>
</CustomField>