force-app/main/default/objects/dsfs__DocuSign_Status__c/fields/Bill_To_Contact_Title__c.field-meta.xml
<CustomField>
    <fullName>Bill_To_Contact_Title__c</fullName>
    <description>To Store the Billing To Contact Title form Billing To Contact field on quote : GTMS-16637</description>
    <label>Bill To Contact Title</label>
    <length>100</length>
    <type>Text</type>
</CustomField>