force-app/main/default/objects/dsfs__DocuSign_Status__c/fields/Billing_City__c.field-meta.xml
<CustomField>
    <fullName>Billing_City__c</fullName>
    <description>To Store the Billing City value form Billing To Account address field on quote : GTMS-16637</description>
    <label>Billing City</label>
    <length>100</length>
    <type>Text</type>
</CustomField>