force-app/main/default/objects/dsfs__DocuSign_Status__c/fields/Billing_Company_Name__c.field-meta.xml
<CustomField>
    <fullName>Billing_Company_Name__c</fullName>
    <description>To store Bill Account Name value from Bill To Account field on Quote : GTMS-16637</description>
    <label>Billing Company Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>