force-app/main/default/objects/dsfs__DocuSign_Status__c/fields/Billing_Country__c.field-meta.xml
<CustomField>
    <fullName>Billing_Country__c</fullName>
    <description>To Store the Billing Country value form Billing To Account address field on quote : GTMS-16637</description>
    <label>Billing Country</label>
    <length>100</length>
    <type>Text</type>
</CustomField>