force-app/main/default/objects/dsfs__DocuSign_Status__c/fields/Billing_Email__c.field-meta.xml
<CustomField>
    <fullName>Billing_Email__c</fullName>
    <description>To Store the Billing Email form Billing To Account Billing Email field on quote : GTMS-16637</description>
    <label>Billing Email</label>
    <length>100</length>
    <type>Text</type>
</CustomField>