force-app/main/default/objects/dsfs__DocuSign_Status__c/fields/Billing_Postal_Code__c.field-meta.xml
<CustomField>
    <fullName>Billing_Postal_Code__c</fullName>
    <description>To Store the Billing Postal Code value form Billing To Account address field on quote : GTMS-16637</description>
    <label>Billing Postal Code</label>
    <length>100</length>
    <type>Text</type>
</CustomField>