force-app/main/default/objects/dsfs__DocuSign_Status__c/fields/Billing_State__c.field-meta.xml
<CustomField>
    <fullName>Billing_State__c</fullName>
    <description>To Store the Billing State value form Billing To Account address field on quote : GTMS-16637</description>
    <label>Billing State</label>
    <length>100</length>
    <type>Text</type>
</CustomField>