force-app/main/default/objects/dsfs__DocuSign_Status__c/fields/Billing_Street__c.field-meta.xml
<CustomField>
    <fullName>Billing_Street__c</fullName>
    <description>To Store the Billing Street value form Billing To Account address field on quote : GTMS-16637</description>
    <label>Billing Street</label>
    <length>255</length>
    <type>Text</type>
</CustomField>