force-app/main/default/objects/dsfs__DocuSign_Status__c/fields/Customer_Preferred_Payment_Method__c.field-meta.xml
<CustomField>
    <fullName>Customer_Preferred_Payment_Method__c</fullName>
    <description>GTMS-16637 : Created for DCA project.</description>
    <label>Customer Preferred Payment Method</label>
    <length>100</length>
    <type>Text</type>
</CustomField>