force-app/main/default/objects/dsfs__DocuSign_Status__c/fields/Customer_require_PO_for_invoicing__c.field-meta.xml
<CustomField>
    <fullName>Customer_require_PO_for_invoicing__c</fullName>
    <label>Customer require PO for invoicing</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>