force-app/main/default/objects/dsfs__DocuSign_Status__c/fields/dsfs__Lead__c.field-meta.xml
<CustomField>
    <fullName>dsfs__Lead__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Lead</label>
    <referenceTo>Lead</referenceTo>
    <relationshipLabel>DocuSign Status</relationshipLabel>
    <relationshipName>DocuSign_Status</relationshipName>
    <type>Lookup</type>
</CustomField>