force-app/main/default/objects/dsfs__DocuSign_Status__c/fields/Email_Recipient__c.field-meta.xml
<CustomField>
    <fullName>Email_Recipient__c</fullName>
    <label>Email Recipient</label>
    <length>75</length>
    <type>Text</type>
</CustomField>