force-app/main/default/objects/dsfs__DocuSign_Status__c/fields/Envelope_Type__c.field-meta.xml
<CustomField>
    <fullName>Envelope_Type__c</fullName>
    <description>added for GTMS-26984</description>
    <label>Envelope Type</label>
    <length>50</length>
    <type>Text</type>
</CustomField>