force-app/main/default/objects/dsfs__DocuSign_Status__c/fields/First_Month_Payment__c.field-meta.xml
<CustomField>
    <fullName>First_Month_Payment__c</fullName>
    <label>First Month Payment</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>