force-app/main/default/objects/dsfs__DocuSign_Status__c/fields/License_Term__c.field-meta.xml
<CustomField>
    <fullName>License_Term__c</fullName>
    <label>License Term</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>