force-app/main/default/objects/dsfs__DocuSign_Status__c/fields/Next_Recurring_Bill_Date__c.field-meta.xml
<CustomField>
    <fullName>Next_Recurring_Bill_Date__c</fullName>
    <label>Next Recurring Bill Date</label>
    <type>Date</type>
</CustomField>