force-app/main/default/objects/dsfs__DocuSign_Status__c/fields/of_HW_Products__c.field-meta.xml
<CustomField>
    <fullName>of_HW_Products__c</fullName>
    <defaultValue>&apos;0&apos;</defaultValue>
    <label># of HW Products</label>
    <length>50</length>
    <type>Text</type>
</CustomField>