force-app/main/default/objects/dsfs__DocuSign_Status__c/fields/Opp_Currency__c.field-meta.xml
<CustomField>
    <fullName>Opp_Currency__c</fullName>
    <description>Initial Creation (GTMS-1631)
to store the opportunity currency.</description>
    <label>Opp Currency</label>
    <length>10</length>
    <type>Text</type>
</CustomField>