force-app/main/default/objects/dsfs__DocuSign_Status__c/fields/PO_Number__c.field-meta.xml
<CustomField>
    <fullName>PO_Number__c</fullName>
    <label>PO_Number</label>
    <length>32</length>
    <type>Text</type>
</CustomField>