force-app/main/default/objects/dsfs__DocuSign_Status__c/fields/Primary_Quote__c.field-meta.xml
<CustomField>
    <fullName>Primary_Quote__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>GTMS-18053: Primary quote from which docusign data was mapped during creation.</description>
    <label>Primary Quote</label>
    <referenceTo>SBQQ__Quote__c</referenceTo>
    <relationshipLabel>DocuSign Status</relationshipLabel>
    <relationshipName>DocuSign_Status</relationshipName>
    <type>Lookup</type>
</CustomField>