force-app/main/default/objects/dsfs__DocuSign_Status__c/fields/Selected_Payment_Type__c.field-meta.xml
<CustomField>
    <fullName>Selected_Payment_Type__c</fullName>
    <description>GTMS-15223 : Created to check Selected Payment Type in Opportunity, Docusign and Quote during order validation.</description>
    <label>Selected Payment Type</label>
    <length>50</length>
    <type>Text</type>
</CustomField>