force-app/main/default/objects/dsfs__DocuSign_Status__c/fields/Shipping_And_Handling__c.field-meta.xml
<CustomField>
    <fullName>Shipping_And_Handling__c</fullName>
    <description>To Store Shipping And Handling value from Opportunity : GTMS-16121</description>
    <label>Shipping And Handling</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>