force-app/main/default/objects/dsfs__DocuSign_Status__c/fields/Total_Hardware_Due__c.field-meta.xml
<CustomField>
    <fullName>Total_Hardware_Due__c</fullName>
    <description>GTMS-19973: created as part of Hypercare issue.</description>
    <label>Total Hardware Due</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>