force-app/main/default/objects/dsfs__DocuSign_Status__c/fields/Total_License_Cost__c.field-meta.xml
<CustomField>
    <fullName>Total_License_Cost__c</fullName>
    <description>added for GTMS-27988</description>
    <label>Total License Cost</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>