force-app/main/default/objects/dsfs__DocuSign_Status__c/fields/Total_License_Due__c.field-meta.xml
<CustomField>
    <fullName>Total_License_Due__c</fullName>
    <description>GTMS-19973: we are adding this as part of Hypercare issues</description>
    <label>Total License Due</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>