force-app/main/default/objects/dsfs__DocuSign_Status__c/listViews/dsfs__All_Envelopes.listView-meta.xml
<ListView>
    <fullName>dsfs__All_Envelopes</fullName>
    <columns>NAME</columns>
    <columns>dsfs__Sender__c</columns>
    <columns>dsfs__Subject__c</columns>
    <columns>dsfs__Envelope_Status__c</columns>
    <columns>dsfs__Opportunity__c</columns>
    <columns>dsfs__Sent_Date_Time__c</columns>
    <columns>dsfs__Viewed_Date_Time__c</columns>
    <columns>dsfs__Completed_Date_Time__c</columns>
    <columns>dsfs__Hrs_Sent_to_Sign__c</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>Email_Recipient__c</field>
        <operation>contains</operation>
        <value>jennifer</value>
    </filters>
    <label>All Envelopes</label>
</ListView>