force-app/main/default/objects/dsfs__DocuSign_Status__c/listViews/In_Process_DSA_Contracts.listView-meta.xml
<ListView>
    <fullName>In_Process_DSA_Contracts</fullName>
    <columns>NAME</columns>
    <columns>dsfs__Sent_Age__c</columns>
    <columns>dsfs__Company__c</columns>
    <columns>dsfs__Opportunity__c</columns>
    <columns>dsfs__Sender__c</columns>
    <columns>dsfs__Subject__c</columns>
    <columns>dsfs__Envelope_Status__c</columns>
    <columns>dsfs__Completed_Date_Time__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>dsfs__Envelope_Status__c</field>
        <operation>equals</operation>
        <value>Sent,delivered</value>
    </filters>
    <filters>
        <field>dsfs__Subject__c</field>
        <operation>contains</operation>
        <value>[Signature Required]</value>
    </filters>
    <label>P: In Process DSA Contracts</label>
</ListView>