force-app/main/default/objects/dsfs__DocuSign_Status__c/listViews/P_Recently_Completed_Referra_Contracts.listView-meta.xml
<ListView>
    <fullName>P_Recently_Completed_Referra_Contracts</fullName>
    <columns>NAME</columns>
    <columns>LAST_UPDATE</columns>
    <columns>dsfs__Subject__c</columns>
    <columns>Email_Recipient__c</columns>
    <columns>dsfs__Company__c</columns>
    <columns>dsfs__Opportunity__c</columns>
    <columns>dsfs__Sender__c</columns>
    <columns>dsfs__Envelope_Status__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>LAST_UPDATE</field>
        <operation>equals</operation>
        <value>LAST_N_DAYS:25</value>
    </filters>
    <filters>
        <field>dsfs__Envelope_Status__c</field>
        <operation>equals</operation>
        <value>Completed</value>
    </filters>
    <filters>
        <field>dsfs__Subject__c</field>
        <operation>contains</operation>
        <value>Referral</value>
    </filters>
    <label>P: Recently Completed Referral Contracts</label>
</ListView>