force-app/main/default/objects/dsfs__DocuSign_Status__c/listViews/Wade_Docusign_Status.listView-meta.xml
<ListView>
    <fullName>Wade_Docusign_Status</fullName>
    <columns>NAME</columns>
    <columns>dsfs__Envelope_Status__c</columns>
    <columns>Email_Recipient__c</columns>
    <columns>dsfs__Hours_to_Complete__c</columns>
    <columns>Balance_Due__c</columns>
    <columns>dsfs__Sent_Age__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>dsfs__Sender__c</field>
        <operation>equals</operation>
        <value>Wade Swanson</value>
    </filters>
    <label>Wade Docusign Status</label>
</ListView>